--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,7 +16,8 @@
     <!-- Second Page -->
     <div id="meeting-page" class="page hidden">
         <div class="video-container">
-            <video id="video" autoplay></video>
+            <img src="{{ url_for('video') }}" width="800" />
+            
         </div>
         <div class="controls">
             <button id="audio-button" class="control-button">Mute</button>
