audio module done :)

--- a/src/templates/audio.html
+++ b/src/templates/audio.html
@@ -62,7 +62,7 @@
 
 document.getElementById("stopButton").addEventListener("click", () => {
     // Stop the audio recording
-    clearInterval(intervalId);
+    clearInterval(intervelid);
     document.getElementById("startButton").disabled = false;
     document.getElementById("stopButton").disabled = true;
    
